--- a/vertical/index.html
+++ b/vertical/index.html
@@ -41,6 +41,7 @@
 <p>ブラウザにおける縦組みのレイアウトの考え方については、W3C技術ノートの「<a href="https://www.w3.org/TR/jlreq/">Requirements for Japanese Text Layout</a>」（<a href="https://www.w3.org/TR/jlreq/ja/">日本語訳：日本語組版処理の要件</a>）がまず参考になります。</p>
 <p>また、CSSの仕様書以外では、<a href="http://tategaki.github.io/">縦書きWeb普及委員会のWebサイト</a>にある「技術解説」やビヨンド・パースペクティブ・ソリューションズ株式会社の<a href="http://csslab.bpsinc.jp/">CSS研究部のサイト</a>、あとはMozilla Developer Networkの<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference">CSSリファレンス</a>（<a href="https://developer.mozilla.org/ja/docs/Web/CSS/Reference">日本語訳のページ</a>）が日本語解説として参考になるでしょう。</p>
 </section>
+</section>
 <section class="subchapter">
 <h2 class="ch2"><span class="ch2-label">X.2</span> <strong>縦書きレイアウトの基礎</strong></h2>
 <p>CSSによる縦組みは、<a href="http://dev.w3.org/csswg/css-writing-modes-3/">CSS Writing Modes Level 3</a>が基礎になります。</p>
