html viewport fix.

--- a/vertical/index.html
+++ b/vertical/index.html
@@ -4,7 +4,7 @@
 <title>EPUB実践入門 - 第x章 縦書きレイアウト</title>
 <link rel="stylesheet" href="style/vertical.css" />
 <!--<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>-->
-<meta name="viewport" content="height=device-height, initial-scale=1.0">
+<meta name="viewport" content="height=device-height, initial-scale=1.0, shrink-to-fit=no">
 <body class="chapter" role="doc-chapter">
 
 <header class="bridgehead">
