--- a/vertical/index.html
+++ b/vertical/index.html
@@ -90,11 +90,18 @@ h1, h2, h3, h4, h5, h6, li, dt, dd, figcaption {
 <p>また、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があります。</p>
 </section>
 <section>
-<h3 class="ch3">段落本文内の文字の書き方</h3>
-<p>実際のHTMLで段落本文内に出てくる英数字は半角で書きます。また、記号は全角で書くようにします。つまり、横書きと同じです。</p>
-<p>ただし、作品において英数字の文字列が明らかに短いものしかない場合は、英数字を全角で書いてすべて正立させる方針もあるでしょう。</p>
+<h3 class="ch3">段落本文内の英数字</h3>
+<p>縦書きを想定したHTMLの本文を書くにあたり、本文内の英数字は半角で書いて構いません。また、記号は全角で書きます。つまり、横書きと同じです。</p>
+<p>ただし、作品において英数字の文字列が明らかに短いものしか記載しない場合は、英数字を全角で書いてすべて正立させてしまう方針もあるでしょう。</p>
+<p>なお、半角スペースが入らない半角文字の文字列は、ブラウザによってはword-break: all;をかけないと自動的に次行に送られないことに注意してください。通常はそこまで長い文字列は記載されないと考え、例えば、次のように処理しておくのが良いかと思います。</p>
+<pre><code class="prettyprint">/* .url = URL文字列,
+.emoji = 絵文字,
+:lang(en) = 英語文字列 を想定。 */
+code, samp, .url, :lang(en) {
+  word-break: break-all;
+}</code></pre>
+<p>なお、このページではfigcaption内で絵文字を連打しているために、Firefoxでは行が送られないので、合わせてこの指定を行っています。</p>
 </section>
-
 <section>
 <h3 class="ch3">リンクのデザイン</h3>
 <p>リンクのデザインは、縦書きの場合、文字列の右側に実線が引かれていることをブラウザに対して勧めています。</p>
