--- a/vertical/index.html
+++ b/vertical/index.html
@@ -50,7 +50,7 @@
 <pre><code class="prettyprint">-ms-writing-mode: tb-rl; /* for IE. */
 -webkit-writing-mode: vertical-rl; /* for safari. */
 writing-mode: vertical-rl;</code></pre>
-<p>これで半角英数字以外のおおよその文字が正立します。正確には<a href="http://unicode.org/reports/tr50/">Unicode<span class="sideways">®</span> Technical Report #50</a>（UTR50）によって規定されています。よく使う記号のうち特に、<span class="tcy">3</span>点リーダが正立しないことに注意してください。縦書き（︙）と横書き（…）のUnicode自体が<a href="https://ja.wikipedia.org/wiki/%E3%83%AA%E3%83%BC%E3%83%80%E3%83%BC_%28%E8%A8%98%E5%8F%B7%29#.E7.AC.A6.E5.8F.B7.E4.BD.8D.E7.BD.AE">別になっています</a>（横書きのほうを縦中横にしても、ブラウザによっては横書きのままに表示されます）。</p>
+<p>これで半角英数字以外のおおよその文字が正立します。正確には<a href="http://unicode.org/reports/tr50/">Unicode<span class="sideways">®</span> Technical Report #50</a>（UTR50）によって規定されています。よく使う記号のうち特に、<span class="tcy">3</span>点リーダがこの指定だけでは正立しないことに注意してください。縦書き（︙）と横書き（…）のUnicode自体が<a href="https://ja.wikipedia.org/wiki/%E3%83%AA%E3%83%BC%E3%83%80%E3%83%BC_%28%E8%A8%98%E5%8F%B7%29#.E7.AC.A6.E5.8F.B7.E4.BD.8D.E7.BD.AE">別になっています</a>。</p>
 <p>wrting-modeの話に戻ります。この指定をbody要素に指定してもFirefox 44.0では上手くブラウザを操作できなくなります。Safariでも現状高さを指定しておく必要があります。そのため、描画領域を縦書き化するためのCSSは次のようになります。</p>
 <pre><code class="prettyprint">html {
   height: 100%; /* for firefox, safari. */
@@ -72,6 +72,7 @@ body {
 <h3 class="ch3">フォントの指定</h3>
 <p>ブラウザ上で縦書きを使う場合、WindowsとMac OSの両方にある書体である游明朝と游ゴシックを指定しておくのが簡単には按配が良くお勧めです。なお、読書システムでは標準の日本語フォントが搭載されていることも多いので、EPUBでは指定しないほうが無難です。<p>
 <p>ただし、Firefoxでは縦書きで游書体を指定した際は、日本語と半角の英数字でベースラインのずれが気になるかと思います。そのため英字の書体も合わせて指定してみても良いかもしれません。</p>
+<p>また、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティなどを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があります。</p>
 <p>そこでこのページでは、次のように指定しています。</p>
 <pre><code class="prettyprint">@font-face {
   font-family: 'Yu Mincho Custom';
@@ -93,11 +94,13 @@ body {
 }
 p {
   font-family: 'Yu Mincho Custom', serif;
+  font-feature-settings: "vert";
 }
 h1, h2, h3, h4, h5, h6, li, dt, dd, figcaption {
   font-family: 'Yu Gothic Custom', sans-serif;
+  font-feature-settings: "vert";
 }</code></pre>
-<p>また、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティなどを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があります。</p>
+<p>なお、font-feature-settings: "vert";を指定することで、横書きの<span class="tcy">3</span>点リーダがChromeで正立します。</p>
 </section>
 <section>
 <h3 class="ch3">段落本文内の英数字</h3>
