--- a/vertical/index.html
+++ b/vertical/index.html
@@ -50,18 +50,22 @@
 <pre><code class="prettyprint">-ms-writing-mode: tb-rl; /* for IE. */
 -webkit-writing-mode: vertical-rl; /* for safari. */
 writing-mode: vertical-rl;</code></pre>
-<p>これで半角英数字以外のおおよその文字が正立します。正確には<a href="http://unicode.org/reports/tr50/">Unicode<span class="sideways">®</span> Technical Report #50</a>（UTR50）によって規定されています。よく使う記号のうち特に、<span class="tcy">3</span>点リーダがこの指定だけでは正立しないことに注意してください。縦書き（︙）と横書き（…）のUnicode自体が<a href="https://ja.wikipedia.org/wiki/%E3%83%AA%E3%83%BC%E3%83%80%E3%83%BC_%28%E8%A8%98%E5%8F%B7%29#.E7.AC.A6.E5.8F.B7.E4.BD.8D.E7.BD.AE">別になっています</a>。</p>
-<p>wrting-modeの話に戻ります。この指定をbody要素に指定してもFirefox 44.0では上手くブラウザを操作できなくなります。Safariでも現状高さを指定しておく必要があります。そのため、描画領域を縦書き化するためのCSSは次のようになります。</p>
+<p>これで半角英数字以外のおおよその文字が正立します。正確には<a href="http://unicode.org/reports/tr50/">Unicode<span class="sideways">®</span> Technical Report #50</a>（UTR50）によって規定されています。ただし現在は、この仕様通りに正立するとは限りません。特に、後述の游書体を当てた場合に<span class="tcy">3</span>点リーダーがこの指定だけでは正立しないことに注意してください。縦書き（︙）と横書き（…）のUnicode自体が<a href="https://ja.wikipedia.org/wiki/%E3%83%AA%E3%83%BC%E3%83%80%E3%83%BC_%28%E8%A8%98%E5%8F%B7%29#.E7.AC.A6.E5.8F.B7.E4.BD.8D.E7.BD.AE">別になっています</a>（縦書きで使われる記号はよく分かれています）。</p>
+<p>writing-modeの話に戻ります。この指定をbody要素に指定してもFirefox 44.0では上手くブラウザを操作できなくなります。Safariでも現状高さを指定しておく必要があります。そのため、描画領域を縦書き化するためのCSSは次のようになります。</p>
 <pre><code class="prettyprint">html {
   height: 100%; /* for firefox, safari. */
 }
 body {
   -webkit-writing-mode: vertical-rl; /* for safari. */
   writing-mode: vertical-rl;
-  width: 100vw; /* for firefox. */
+  width: -moz-calc(100vw); /* for firefox. */
   height: 100%; /* for firefox, safari. */
+  overflow: auto !important; /* for edge. But specified overflow-y is canceled. */  
 }</code></pre>
-<p>また、寝ている状態（値：mixed）になっている半角文字を正立させたい場合には、text-orientationプロパティにuprightを指定します。逆に日本語等を寝せたい場合にはsidewaysを指定します。</p>
+<p>さらに、Mobile Safari対策のために次のmeta要素を入れるようにしてください。しかし現状Mobile Safariでは描画時に、縦組みの始まり側にスクロール位置が置かれません。</p>
+<pre><code class="prettyprint"><span class="keyword">&lt;meta</span><span class="pln"> </span><span class="atn">name</span><span class="pun">=</span><span class="string">"viewport"</span><span class="pln"> </span><span class="atn">content</span><span class="pun">=</span><span class="string">"height=device-height, initial-scale=1.0, shrink-to-fit=no"</span><span class="keyword">&gt;</span>
+</code></pre>
+<p>また、寝ている状態（初期値：mixed）になっている半角文字を正立させたい場合には、text-orientationプロパティにuprightを指定します。逆に日本語等を寝せたい場合にはsidewaysを指定します。</p>
 <!--<pre><code class="prettyprint">text-orientation: upright;</code></pre>-->
 <p>一部の文字だけ縦中横にしたい場合、基本的にはtext-combine-uprightプロパティにallを指定します。ですが、各ブラウザへの実装が目下進められている段階であり、現時点で使用するためにはその指定が煩雑です。
 </section>
@@ -72,8 +76,8 @@ body {
 <h3 class="ch3">フォントの指定</h3>
 <p>ブラウザ上で縦書きを使う場合、WindowsとMac OSの両方にある書体である游明朝と游ゴシックを指定しておくのが簡単には按配が良くお勧めです。なお、読書システムでは標準の日本語フォントが搭載されていることも多いので、EPUBでは指定しないほうが無難です。<p>
 <p>ただし、Firefoxでは縦書きで游書体を指定した際は、日本語と半角の英数字でベースラインのずれが気になるかと思います。そのため英字の書体も合わせて指定してみても良いかもしれません。</p>
-<p>また、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティなどを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があります。</p>
-<p>そこでこのページでは、次のように指定しています。</p>
+<p>また、OpenTypeフォント自体が持っている情報をCSSで有効化するためには、font-variantプロパティやfont-feature-settingsプロパティなどを使います。仕様書以外に、<a href="http://help.typekit.com/customer/ja/portal/articles/1789708">Adobe Typekitのヘルプセンター</a>に日本語で説明があり、参考になるでしょう。</p>
+<p>ということで、このページでは、次のように指定しています。</p>
 <pre><code class="prettyprint">@font-face {
   font-family: 'Yu Mincho Custom';
   src: local('Yu Mincho'), local('YuMincho');
@@ -94,25 +98,36 @@ body {
 }
 p {
   font-family: 'Yu Mincho Custom', serif;
-  font-feature-settings: "vert";
+  font-feature-settings: 'vert';
 }
 h1, h2, h3, h4, h5, h6, li, dt, dd, figcaption {
   font-family: 'Yu Gothic Custom', sans-serif;
-  font-feature-settings: "vert";
+  font-feature-settings: 'vert';
 }</code></pre>
-<p>なお、font-feature-settings: "vert";を指定することで、横書きの<span class="tcy">3</span>点リーダがChromeで正立します。</p>
+<p>なお、<code>font-feature-settings: 'vert';</code>を指定することで、フォントによっては縦書き用フォントを使用するようになるため、游書体とwriting-modeプロパティだけでは正立しなかった横書きの<span class="tcy">3</span>点リーダーが縦書きのものになりChromeで正立するようになります。</p>
+<p>また、コードのフォントはデフォルトではSafariできれいに表示されません。よって、Safari用に具体的に指定する必要があります。また、iPhone（iOS 9）のMobile Safari上では自動的にコードのフォントサイズに修正が入るため、これを打ち消す必要があります。それらの対応としてこのページでは、次のように指定しています。</p>
+<pre><code class="prettyprint">@font-face {
+  font-family: 'Vertical Mono';
+  src: local("Consolas"), local("Menlo"); /* for safari, and adjust windows. */
+}
+code, samp, var {
+  font-family: 'Vertical Mono', monospace; /* for sfarii, and adjust windows. */
+  -webkit-text-size-adjust: 100%; /* for code font size in ios(iphone) safari. */
+}</code></pre>
+
+
 </section>
 <section>
 <h3 class="ch3">段落本文内の英数字</h3>
 <p>縦書きを想定したHTMLの本文を書くにあたり、本文内の英数字は半角で書いて構いません。また、記号は全角で書きます。つまり、横書きと同じです。</p>
 <p>ただし、作品において英数字の文字列が明らかに短いものしか記載しない場合は、英数字を全角で書いてすべて正立させてしまう方針もあるでしょう。</p>
-<p>なお、半角スペースが入らない半角文字の文字列は、ブラウザによってはword-break: all;をかけないと自動的に次行に送られないことに注意してください。通常はそこまで長い文字列は記載されないと考え、例えば、次のように処理しておくのが良いかもしれません。</p>
+<p>なお、半角スペースが入らない半角文字の文字列は、ブラウザによっては<code>word-break: all;</code>をかけないと自動的に次行に送られないことに注意してください。通常はそこまで長い文字列は記載されないと考え、例えば次のように設定しておき、都合に合わせてHTML側に&lt;span&gt;タグを入れてもよいでしょう。</p>
 <pre><code class="prettyprint">/* .url = URL文字列,
 :root:lang(en) = 英語文字列 を想定。 */
 code, samp, .url, :root:lang(en) {
   word-break: break-all;
 }</code></pre>
-<p>なお、このページではfigcaption内で絵文字を連打しているために、Firefoxでは行が送られないので、合わせてこの指定を行っています。</p>
+<p>なお、このページではfigcaption要素内で絵文字を連打しているために、Firefoxでは次行に送られないので、あわせてこの指定を行っています。</p>
 
 </section>
 <section>
@@ -122,12 +137,53 @@ code, samp, .url, :root:lang(en) {
 </section>
 <section>
 <h3 class="ch3">ルビ</h3>
-<p>ルビを簡単に確認しておきます。ルビのレイアウトは<a href="https://drafts.csswg.org/css-ruby-1/">CSS Ruby Layout Module Level 1</a>にて規定されます。基本的には、グループルビとインラインルビが必要になるでしょう。</p>
-<p>また、Chromeではfont-feature-settingsプロパティを使うことでルビ用字形が有効にできます。</p>
-<p>例えば、次のようになります。</p>
+<p>ルビを簡単に確認しておきます。ルビのレイアウトは<a href="https://drafts.csswg.org/css-ruby-1/">CSS Ruby Layout Module Level 1</a>にて規定されます。ルビのレイアウトにそこまで気を使わない場合には、グループルビとインラインルビを把握していれば十分でしょう。</p>
+<p>また、Chrome 49ではfont-feature-settingsプロパティを使うこと（値：ruby）でルビ用字形が有効になるようです（Windowsで確認）。</p>
+<p>例えば、このページでは次のCSS（SCSS）を適用してきます。</p>
+<pre><code class="prettyprint">rt, rtc {
+  font-variant-east-asian: ruby;
+  -moz-font-feature-settings: 'ruby';
+  -webkit-font-feature-settings: 'ruby';
+  font-feature-settings: 'ruby';
+}
+rtc {
+  ruby-position: under;
+}
+@supports not (display: ruby-text-container) { /* for chrome. */
+  rtc {
+    &::before {
+      display: inline;
+      content: '\FE35';
+    }
+    &::after {
+      display: inline;
+      content: '\FE36';
+    }
+  }
+}
+@mixin inline-ruby {
+  display: inline;
+  font-size: inherit;
+  white-space: inherit;
+  text-emphasis: inherit;    
+  font-variant-east-asian: inherit;
+  -moz-font-feature-settings: inherit;
+  -webkit-font-feature-settings: inherit;
+  font-feature-settings: inherit;
+}
+.inline-ruby {
+  @include inline-ruby;
+  rt, rp, rtc {
+    @include inline-ruby;
+  }    
+}
+</code></pre>
+<p>その結果、次のよう描画されます（ちなみに最後の「札幌（さっぽろ）」と表示されている箇所がインラインルビです）。</p>
 <figure class="bfl example">
 <p>先日、イベントに参加するために<ruby>北海道<rp>（</rp><rt>ほっかいどう</rt><rp>）</rp></ruby>に行ってきました。雪が今年はあまり降っていないということで<ruby>大通<rp>（</rp><rt>おおどおり</rt><rp>）</rp></ruby>などの歩道は地面が<ruby>見<rp>（</rp><rt>み</rt><rp>）</rp></ruby>えていました。食事については<ruby>🍣<rp>（</rp><rt>美味しいお寿司</rt><rp>）</rp></ruby>をたくさん食べてきました。<ruby>鮪<rp>（</rp><rt>まぐろ</rt><rp>）</rp></ruby>やタコ、<ruby>北寄貝<rp>（</rp><rt>ほっきがい</rt><rp>）</rp></ruby>のほか、旬の<ruby>鰤<rp>（</rp><rt>ぶり</rt><rp>）</rp></ruby>や<ruby>真鱈の白子<rp>（</rp><rt>たちぽん</rt><rp>）</rp></ruby>などなど<span class="tcy">…</span><span class="tcy">…</span>。その時の<ruby>写真<rp>（</rp><rt>しゃしん</rt><rp>；</rp><rtc>Photo</rtc><rp>）</rp></ruby>をこのページに掲載します。</p>
+<p style="text-align: right;">—— <span class="tcy">2</span><span class="tcy">0</span><span class="tcy">1</span><span class="tcy">6</span>年、<ruby class="inline-ruby">札幌<rp>（</rp><rt>さっぽろ</rt><rp>）</rp></ruby>にて</p>
 </figure>
+
 
 
 
